--- a/index.html
+++ b/index.html
@@ -156,19 +156,15 @@
              <h4 class="subsection-title">Spatial Distribution</h4>
 
              <p class="summary">
-                Finding 2:
+                Finding 2:The real estate transactions in Boston show significant spatial concentration, with the highest density occurring in central Boston, particularly in the Back Bay area. When examining the distribution of flipped properties versus non-flipped transactions, the data reveals a notably higher rate of property flips in central Boston.
              <!-- Second Image -->
              <img src="image/201.png" alt="Second Visualization">
              <p class="figure-caption">Figure 3: Spatial Distribution of Transactions</p>
  
              <!-- Text Block -->
              <p class="content">
-                 [Continue with more analysis or insights from the second visualization.]
+                Figure 2 shows all datapoints in the dataset, which clearly reveals transaction density peaks dramatically in central Boston compared to surrounding areas.
              </p>
-              <!-- Text Block -->
-              <p class="content">
-                [Final observations and conclusions from the third image.]
-            </p>
 
              <!-- Second Image -->
              <img src="image/203.png" alt="Second Visualization">
@@ -176,13 +172,7 @@
  
              <!-- Text Block -->
              <p class="content">
-                 [Continue with more analysis or insights from the second visualization.]
-             </p>
- 
-    
-             <!-- Text Block -->
-             <p class="content">
-                 [Final observations and conclusions from the third image.]
+                Figure 3 zooms in using 75% quantiles, showing that 75% of all transactions have occurred within this small neighborhood area. The figure uses a binary color scheme where red points indicate potential flips (filtered by flip_term not equals to "non_flip") and grey points represent non-flip transactions. This detailed view reveals a higher proportion of flipped properties (red points) relative to regular transactions, indicating this area has been a focal point for property flipping activity.]
              </p>
 
 
